--- a/base_static/global/base.css
+++ b/base_static/global/base.css
@@ -1,12 +1,12 @@
-.link {
-    text-decoration: none;
-    color: black;
-}
-
-li {
+.list_li {
     list-style-type: none
 }
 
 a {
     text-decoration: none;
+}
+
+.link {
+    text-decoration: none;
+    color: black;
 }
