--- a/sistema/templates/sistema/gerente/funcionarios.html
+++ b/sistema/templates/sistema/gerente/funcionarios.html
@@ -3,7 +3,7 @@
 {% block menu %}
        <a href= "{% url "sistema:solicitacoes"%}" >solicitacoes</a>
        <a href= "{% url "sistema:funcionarios"%}" >Gerenciar Funcionarios</a>
-       <a href="sistema: login">Logout</a>        
+       <a href="{% url "sistema:logout_gerente" %}">Logout</a>        
 {% endblock menu %}
 
 
@@ -17,22 +17,61 @@
 
 {% block content %}
     {% if objetos_pagina %}
-        <h2>Funcionários</h2>
-        {% for funcionario in objetos_pagina %}
-            <a href={% url link_views_acao funcionario.id%}>
-                <h4>Funcionário</h4>
-                <ul>
-                    <li>Nome: {{funcionario.nome_completo}}</li>
-                    <li>cpf: {{funcionario.cpf}}</li>
-                    <li>telefone: {{funcionario.telefone}}</li>
-                    <li>E-mail: {{funcionario.email}}</li>
-                    <li>Nascimento: {{funcionario.nascimento}}</li>
-                    <li>Estado: {{funcionario.estado}}</li>
-                    <li>Cidade: {{funcionario.cidade}}</li>
-                </ul>
-            </a>
-                <br>
-        {% endfor %}
+        <table>
+
+            <caption>Funcionários</caption>
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>Nome Completo</th>
+                    <th>Cpf</th>
+                    <th>Telefone</th>
+                    <th>Email</th>
+                    <th>estado</th>
+                   
+                </tr>
+            </thead>
+
+            {% for funcionario in objetos_pagina %}
+            <tr>    
+                <td>
+                    <a href="{% url link_views_acao funcionario.id %}" class="link" >
+                        {{funcionario.id}}
+                    </a>
+                </td>
+                
+                <td>
+                    <a href="{% url link_views_acao funcionario.id %}" class="link" >
+                {{funcionario.nome_completo }}
+                </a>
+                </td>
+
+                <td>
+                <a href="{% url link_views_acao funcionario.id %}" class="link" >
+                    {{funcionario.cpf }}
+                    </a>
+                </td>
+
+                <td>
+                <a href="{% url link_views_acao funcionario.id %}" class="link" >
+                    {{funcionario.telefone }}
+                    </a>
+                </td>
+                <td>
+                <a href="{% url link_views_acao funcionario.id %}" class="link" >
+                {{funcionario.email }}
+                </a>
+                </td>
+                <td>
+                <a href="{% url link_views_acao funcionario.id %}" class="link" >
+                {{funcionario.estado }}
+                </a>
+                </td>
+			</tr>
+            {% endfor %}
+            
+
+        </table>
 
         {% for numero_pagina in objetos_pagina.paginator.page_range %}
             <a href="{% url link_views_origem numero_pagina %}">{{numero_pagina}}</a>
