--- a/sistema/templates/sistema/form.html
+++ b/sistema/templates/sistema/form.html
@@ -2,22 +2,31 @@
 
 {% block content %}
 
-    <form action="{{action_form}}" method="POST">
-        {% csrf_token %}
-        {% for field in form %}
-        <label for={{field.id_for_label}}>{{field.label}}: </label>
-        {{field}}
-        {{field.errors}}
-        {{field.help_text}}
-        {% endfor %}
+
+
+<form action="{{action_form}}" method="POST">
+    {% csrf_token %}
+    {% for field in form %}
+    <br>
+    <label for={{field.id_for_label}}>{{field.label}}: </label>
+    {{field}} <br>
+    
+        <div class='list_li'>
+            {{field.help_text}}
+            {{field.errors}}
+        </div>
+            <br>
+         {% endfor %}
         
         {% if  form.non_field_errors %}
-        {% for error in form.non_field_errors %}
+            <br>
+            {% for error in form.non_field_errors %}
                 {{error}}
             {% endfor %}
+            <br>
         {% endif %}
 
         <br><input type="submit" value="Submit">
-    </form> 
+        </form> 
 
 {% endblock content %}
