--- a/sistema/templates/sistema/funcionario/acao_livro.html
+++ b/sistema/templates/sistema/funcionario/acao_livro.html
@@ -8,7 +8,6 @@
 
 {% block content %}
     <h4>Livro</h4>
-    <form action="{% url link_acao livro.id %}" method="post">
         <ul>
             <li>Nome: {{livro.nome}}</li>
             <li>Id: {{livro.livro_id}}</li>
@@ -17,9 +16,16 @@
             <li>Ano: {{livro.ano}}</li>
         </ul>
         <br>
+    <form action="{% url link_acao livro.id %}" method="post">
         {% if acao_label == "Excluir Livro" %}
             <label for="excluir">Motivo exclusao:</label>
             <textarea name="motivo_exclusao" id="excluir" cols="30" rows="5" required></textarea> <br>
+        {% elif acao_label == "Emprestar" %}
+            <label for="cpf">Inforne o cpf</label>
+            <input type="text" name="cpf" id="cpf">
+            <label for="senha">Infome a senha</label>
+            <input type="password" name="senha" id="senha">
+            <br><br>
         {% endif %}
         <input type="submit" value={{acao_label}}>
     </form>
