--- a/sistema/templates/sistema/funcionario/acao_livro.html
+++ b/sistema/templates/sistema/funcionario/acao_livro.html
@@ -17,6 +17,7 @@
         </ul>
         <br>
     <form action="{% url link_acao livro.id %}" method="post">
+        {% csrf_token %}
         {% if acao_label == "Excluir Livro" %}
             <label for="excluir">Motivo exclusao:</label>
             <textarea name="motivo_exclusao" id="excluir" cols="30" rows="5" required></textarea> <br>
