--- a/sistema/templates/sistema/gerente/aprovar_excluir.html
+++ b/sistema/templates/sistema/gerente/aprovar_excluir.html
@@ -18,6 +18,7 @@
                 <li>Cidade: {{funcionario.cidade}}</li>
         </ul> 
         <form action="{% url acao_link funcionario.id  %}" method="post">
+                {% csrf_token %}
                 <input type="submit" value={{acao_label}}>
         </form>
 {% endblock content %}
