--- a/sistema/templates/sistema/form.html
+++ b/sistema/templates/sistema/form.html
@@ -2,20 +2,20 @@
 
 {% block content %}
 
-    <form action="{{action_form}}" method="POST">
+    <form action="{{action_form}}" method="post">
         {% csrf_token %}
         {% for field in form %}
         <br>
         <label for={{field.id_for_label}}>{{field.label}}: </label>
         {{field}} <br>
-        
+
             <div class='list_li'>
                 {{field.help_text}}
                 {{field.errors}}
             </div>
                 <br>
             {% endfor %}
-            
+
             {% if  form.non_field_errors %}
                 <br>
                 {% for error in form.non_field_errors %}
@@ -24,7 +24,7 @@
                 <br>
             {% endif %}
 
-            <br><input type="submit" value="Submit">
+            <br><input type="submit" value="Cadastrar">
     </form> 
 
 {% endblock content %}
