--- a/base_static/global/base.css
+++ b/base_static/global/base.css
@@ -1,3 +1,8 @@
+:root {
+    --body-bg: #fff;
+    --error-fg: #ba2121;
+}
+
 .list_li {
     list-style-type: none
 }
@@ -9,4 +14,22 @@ a {
 .link {
     text-decoration: none;
     color: black;
+}
+
+.alert {
+    text-align: center;
+    font-size: 14px;
+    font-weight: 700;
+    display: block;
+    padding: 10px 12px;
+    margin: 0 0 10px 0;
+    background-position: 5px 12px;
+    overflow-wrap: break-word;
+    border-radius: 4px;
+}
+
+.alert-warning {
+    color: var(--error-fg);
+    border: 1px solid var(--error-fg);
+    background-color: var(--body-bg);
 }
