--- a/sistema/templates/sistema/funcionario/emprestimo/emprestimos.html
+++ b/sistema/templates/sistema/funcionario/emprestimo/emprestimos.html
@@ -3,7 +3,7 @@
 {% load filtros %}
 
 {% block busca %}
-    <form action="{% url "sistema:busca_emprestimos" %}" method="get">
+    <form action="" method="get">
         <input type="text" name="q" id="busca" placeholder='buscar emprestimo' autofocus >
     </form>
 {% endblock busca %}
