--- a/sistema/templates/sistema/funcionario/usuario.html
+++ b/sistema/templates/sistema/funcionario/usuario.html
@@ -3,7 +3,7 @@
 {% block menu %}
         <a href="{% url link_template_voltar %}">Voltar</a>
 {% endblock menu %}
-
+{% block busca %}{% endblock busca %}
 
 {% block content %}
         <br><br>        
@@ -26,4 +26,3 @@
                 <input type="submit" value={{acao_label}}>
         </form>
 {% endblock content %}
-
