--- a/sistema/templates/sistema/gerente/funcionario.html
+++ b/sistema/templates/sistema/gerente/funcionario.html
@@ -4,6 +4,7 @@
         <a href="{% url link_template_voltar %}">Voltar</a>
 {% endblock menu %}
 
+{% block busca %}{% endblock busca %}
 
 {% block content %}
         <br><br>        
@@ -22,5 +23,4 @@
                 <input type="submit" value={{acao_label}}>
         </form>
 {% endblock content %}
-
 
