--- a/sistema/templates/sistema/gerente/funcionarios.html
+++ b/sistema/templates/sistema/gerente/funcionarios.html
@@ -1,11 +1,4 @@
-{% extends link_base_html %}
-
-{% block busca %}
-    <form action="{% url busca_action %}" method="get">
-        <input type="text" name="q" id="busca" value="{{search_value}}"
-placeholder="busca"> 
-    </form>
-{% endblock busca %}
+{% extends "global/base.html" %}
 
 {% block content %}
     {% if page_obj %}
