--- a/sistema/templates/sistema/login.html
+++ b/sistema/templates/sistema/login.html
@@ -5,20 +5,30 @@
  {% block content %}
     <h4>Login</h4>
 
-    <form action="{{action_form}}" method="POST">
+    <form action="{% url action_form %}" method="post">
         {% csrf_token %}
         {% for field in form %}
-        <label for={{field.id_for_label}}>{{field.label}}: </label>
-        {{field}}
-        {{field.errors}}
-        {{field.help_text}}
+            <label for="{{field.id_for_label}}">{{field.label}}: </label>
+            {{field}}
+            {{field.help_text}}
+
+            {% if  field_errors %}
+                {% for error in field.errors %}
+                   <div class="alert alert-warning">
+                    {{error}}
+                   </div>
+                {% endfor %}
+            {% endif %}
         {% endfor %}
 
         {% if  form.non_field_errors %}
-            {% for error in form.non_field_errors %}
+              {% for error in form.non_field_errors %}
+                <div class="alert alert-warning">
                   {{error}}
-            {% endfor %}
+                </div>
+              {% endfor %}
         {% endif %}
+
         <br><input type="submit" value="Submit">
     </form>
 
