--- a/sistema/templates/sistema/login.html
+++ b/sistema/templates/sistema/login.html
@@ -5,6 +5,14 @@
  {% block content %}
     <h4>Login</h4>
 
+    {% if  form.non_field_errors %}
+          {% for error in form.non_field_errors %}
+            <div class="alert alert-warning">
+              {{error}}
+            </div>
+          {% endfor %}
+    {% endif %}
+
     <form action="{% url action_form %}" method="post">
         {% csrf_token %}
         {% for field in form %}
@@ -21,19 +29,11 @@
             {% endif %}
         {% endfor %}
 
-        {% if  form.non_field_errors %}
-              {% for error in form.non_field_errors %}
-                <div class="alert alert-warning">
-                  {{error}}
-                </div>
-              {% endfor %}
-        {% endif %}
-
         <br><input type="submit" value="Submit">
     </form>
 
-    {% if criar_gerente %}
-      <br><a href="{% url criar_gerente %}">Criar Conta</a>   
-    {% endif %}
+      <br><a href="{% url criar_funcionario %}">Criar Conta Funcionário</a>
+
+      <br><a href="{% url criar_gerente %}">Criar Conta Gerente</a>
 
 {% endblock content %}
