mudando livro para create view w modificações

--- a/sistema/templates/sistema/funcionario/usuario.html
+++ b/sistema/templates/sistema/funcionario/usuario.html
@@ -23,6 +23,6 @@
             </ul> 
 
         <form action="{% url acao_link usuario.id  %}" method="post">
-                <input type="submit" value={{acao_label}}>
+                <input type="submit" value="{{acao_label}}">
         </form>
 {% endblock content %}
