--- a/sistema/templates/sistema/funcionario/livro.html
+++ b/sistema/templates/sistema/funcionario/livro.html
@@ -29,6 +29,6 @@
             <input type="password" name="senha" id="senha" required>
             <br><br>
         {% endif %}
-        <input type="submit" value={{acao_label}}>
+        <input type="submit" value="{{acao_label}}">
     </form>
 {% endblock content %}
